Maybe fix current section shrinking when container above overflows

--- a/src/styles/courseoutline.scss
+++ b/src/styles/courseoutline.scss
@@ -11,6 +11,8 @@
     .tree-view:first-of-type {
         margin-top: 2px;
     }
+
+    overflow: auto;
 }
 
 .tree-view_arrow {
