--- a/src/styles/currentsection.scss
+++ b/src/styles/currentsection.scss
@@ -7,6 +7,7 @@
     //max-height: calc(100% - 52px);
 
     flex: 1;
+    min-height: 50%;
 }
 
 .sectionText {
